--- a/sample.ipynb
+++ b/sample.ipynb
@@ -218,21 +218,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0f88adf1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# STEP 3: Optional - Drop Mongo-style fields (if not needed)\n",
-    "df.drop(columns=['_id.$oid', '__v'], inplace=True, errors='ignore')\n",
-    "\n",
-    "\n",
-    "\n"
+    "df.drop(columns=['_id.$oid', '__v'], inplace=True, errors='ignore')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6d46de21",
    "metadata": {},
    "outputs": [
@@ -479,7 +475,7 @@
     }
    ],
    "source": [
-    "df.head()  # Display the first few rows of the cleaned DataFrame"
+    "df.head()  "
    ]
   },
   {
@@ -505,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8885fba1",
    "metadata": {},
    "outputs": [
@@ -976,12 +972,12 @@
     }
    ],
    "source": [
-    "df.describe(include='all')  # Get a summary of the DataFrame"
+    "df.describe(include='all')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3e46bde7",
    "metadata": {},
    "outputs": [
@@ -1033,22 +1029,20 @@
     }
    ],
    "source": [
-    "df.isnull().sum()  # Check for null values in the DataFrame"
+    "df.isnull().sum() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4015a072",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_sorted = df.sort_values(['userWallet', 'actionData.toId', 'timestamp'])\n",
     "\n",
-    "# Compute time difference from previous tx to same toId\n",
     "df_sorted['toId_time_diff'] = df_sorted.groupby(['userWallet', 'actionData.toId'])['timestamp'].diff()\n",
     "\n",
-    "# Now compute average time between repeated toId interactions\n",
     "avg_toid_spacing = (\n",
     "    df_sorted.groupby('userWallet')['toId_time_diff']\n",
     "    .mean()\n",
@@ -1060,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7edaa8bd",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1070,7 @@
     }
    ],
    "source": [
-    "df_sorted['toId_time_diff'].isna().sum()  # Check if there are any NaN values left in the time difference column\n"
+    "df_sorted['toId_time_diff'].isna().sum()  "
    ]
   },
   {
@@ -1142,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "28b9c7cc",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1189,7 @@
     }
    ],
    "source": [
-    "df_sorted.isnull().sum()  # Check for null values in the DataFrame"
+    "df_sorted.isnull().sum()  "
    ]
   },
   {
@@ -1211,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2b2d5081",
    "metadata": {},
    "outputs": [],
@@ -1228,7 +1222,6 @@
     "\n",
     "df_sorted[fill_zero_cols] = df_sorted[fill_zero_cols].fillna(0.0)\n",
     "\n",
-    "# Optional: convert ID columns to string 'none'\n",
     "id_cols = [\n",
     "    \"actionData.liquidatorId\", \n",
     "    \"actionData.repayerId\", \n",
