--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2485,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "id": "9f4f84df",
    "metadata": {},
    "outputs": [
@@ -2495,16 +2495,19 @@
      "text": [
       "\n",
       "Random Forest Regressor:\n",
-      "R² Score: 0.9791070494715951\n",
-      "MAE: 4.675006553207959\n",
-      "RMSE: 25.913748636050308\n"
+      "R² Score: 0.9786518004486222\n",
+      "MAE: 5.868258725868022\n",
+      "RMSE: 26.194552330380983\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "rf = RandomForestRegressor(random_state=42)\n",
+    "rf = RandomForestRegressor(\n",
+    "    n_estimators=150,     \n",
+    "    max_depth=8,          # Limit tree depth to avoid overfitting\n",
+    "    random_state=42 )\n",
     "rf.fit(X_train, y_train)\n",
     "y_pred_rf = rf.predict(X_test)\n",
     "\n",
@@ -2516,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "94caabf9",
    "metadata": {},
    "outputs": [
@@ -2526,16 +2529,21 @@
      "text": [
       "\n",
       "Gradient Boosting Regressor:\n",
-      "R² Score: 0.9823155040579195\n",
-      "MAE: 5.336194394694542\n",
-      "RMSE: 23.84112236038215\n"
+      "R² Score: 0.9820767385395762\n",
+      "MAE: 4.535191432726929\n",
+      "RMSE: 24.001527061900628\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
-    "gbr = GradientBoostingRegressor(random_state=42)\n",
+    "gbr = GradientBoostingRegressor(\n",
+    "    n_estimators=200,    \n",
+    "    learning_rate=0.05,   \n",
+    "    max_depth=4,         \n",
+    "    random_state=42     \n",
+    ")\n",
     "gbr.fit(X_train, y_train)\n",
     "y_pred_gbr = gbr.predict(X_test)\n",
     "\n",
