--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2485,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "9f4f84df",
    "metadata": {},
    "outputs": [
@@ -2506,7 +2506,7 @@
     "\n",
     "rf = RandomForestRegressor(\n",
     "    n_estimators=150,     \n",
-    "    max_depth=8,          # Limit tree depth to avoid overfitting\n",
+    "    max_depth=8,          \n",
     "    random_state=42 )\n",
     "rf.fit(X_train, y_train)\n",
     "y_pred_rf = rf.predict(X_test)\n",
